--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,96 @@ code {
     monospace;
 }
 
+#main h1 {
+  color: #444;
+  text-align: center;
+}
+
+#main {
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.display-books {
+  width: 60%;
+  height: 100%;
+  padding: 0 30px 0 0;
+}
+
 #book-list {
+  padding: 0;
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#book-list li {
+  margin: 12px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #880e4f;
+  box-shadow: 1px 2px 3px rgba(0,0,0,0.3);
+  cursor: pointer;
+  color: #880e4f;
+}
+
+form.add-form {
+  background: #fff;
+  padding: 20px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 400px;
+}
+
+form .field {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
+
+form label {
+  text-align: right;
+  padding: 6px;
+}
+
+form select, 
+form input {
+  margin: 4px;
+  padding: 6px;
+  box-sizing: border-box;
+}
+
+form input {
+  border-radius: 2px;
+  border: 1px solid rgb(109, 109, 109);
+  -webkit-appearance: none;
+}
+
+form button {
+  color: #fff;
+  font-size: 2em;
+  background: #ad1457;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border: 0;
+  padding: 0 10px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+
+#book-details {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 40%;
+  height: 100%;
+  background: #fff;
+  box-shadow: 2px 2px 3px rgba(0,0,0,0.3);
+  padding: 30px;
+  overflow: auto;
+  box-sizing: border-box;
 }
